; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_g_main.c_G_ShutdownGame.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_g_main.c_G_ShutdownGame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@.str = private unnamed_addr constant [24 x i8] c"==== ShutdownGame ====\0A\00", align 1
@level = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str.1 = private unnamed_addr constant [15 x i8] c"ShutdownGame:\0A\00", align 1
@.str.2 = private unnamed_addr constant [62 x i8] c"------------------------------------------------------------\0A\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"bot_enable\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @G_ShutdownGame(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 @G_Printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @level, i32 0, i32 0), align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = call i32 @G_LogPrintf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  %8 = call i32 @G_LogPrintf(i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.2, i64 0, i64 0))
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @level, i32 0, i32 0), align 8
  %10 = call i32 @trap_FS_FCloseFile(i64 %9)
  br label %11

11:                                               ; preds = %6, %1
  %12 = call i32 (...) @G_WriteSessionData()
  %13 = call i64 @trap_Cvar_VariableIntegerValue(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0))
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %11
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @BotAIShutdown(i32 %16)
  br label %18

18:                                               ; preds = %15, %11
  ret void
}

declare dso_local i32 @G_Printf(i8*) #1

declare dso_local i32 @G_LogPrintf(i8*) #1

declare dso_local i32 @trap_FS_FCloseFile(i64) #1

declare dso_local i32 @G_WriteSessionData(...) #1

declare dso_local i64 @trap_Cvar_VariableIntegerValue(i8*) #1

declare dso_local i32 @BotAIShutdown(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
